# Process this file with autoconf to produce a configure script.

AC_INIT(mod_mapnik_wms.c,0.1)
AM_INIT_AUTOMAKE()
AC_CONFIG_HEADERS(config.h)

AC_PROG_CXX
AC_PROG_CXXCPP
AC_LANG_CPLUSPLUS
AC_CANONICAL_HOST
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_HEADER_STDC


# this will look for apxs command - put it in $APXS, fail on failure
AX_WITH_APXS()
# find apr-config binary
AC_ARG_WITH(apr_config, AC_HELP_STRING([[--with-apr-config=FILE]], [Path to apr-config program]),
    [ apr_config="$withval" ],
    [AC_PATH_PROGS(apr_config,
        [apr-config apr-0-config apr-1-config],
        [no],
        [$PATH:/usr/sbin/:/usr/local/apache2/bin]
    )]
)

if test "$apr_config" = "no"; then
   AC_MSG_ERROR(Could not find the apr-config program.  You can specify a location with the --with-apr-config=FILE option.  It may be named apr-0-config or apr-1-config and can be found in your apache2 bin directory.)
fi
$apr_config --cppflags &> /dev/null
if test "$?" != "0"; then
  AC_MSG_ERROR($apr_config is not a valid apr-config program)
fi

APACHE_CFLAGS="-std=c++11 -I`${APXS} -q INCLUDEDIR` -I`${apr_config} --includedir`"
AC_SUBST(APACHE_CFLAGS)

#AX_WITH_MAPNIK()
#AC_ARG_WITH(mapnik_config, AC_HELP_STRING([[--with-mapnik-config=FILE]], [Path to mapnik-config program]),
#    [ mapnik_config="$withval" ],
#    [AC_PATH_PROGS(mapnik_config,
#        [mapnik-config],
#        [no],
##        [$PATH]
#    )]
#)
mapnik_config=/usr/bin/mapnik-config

if test "$mapnik_config" = "no"; then
   AC_MSG_ERROR(Could not find the mapnik-config program.  You can specify a location with the --with-mapnik-config=FILE option. )
fi
$mapnik_config --cppflags &> /dev/null
if test "$?" != "0"; then
  AC_MSG_ERROR($mapnik_config is not a valid mapnik-config program 123)
fi

AC_ARG_WITH(mapnik-headers,
            [AC_HELP_STRING(
              [--with-mapnik-headers],
              [Path to mapnik header files])
            ],
            [CPPFLAGS="-I$withval"])

CPPFLAGS="$CPPFLAGS `${mapnik_config} --includes`"
LDFLAGS="$LDFLAGS `${mapnik_config} --ldflags`"

libft_INCLUDES=`pkg-config freetype2 --cflags`
libft_LDFLAGS=`pkg-config freetype2 --libs`
CPPFLAGS="$libft_INCLUDES $CPPFLAGS"
LDFLAGS="$libft_LDFLAGS $LDFLAGS"

AC_CHECK_HEADERS(gd.h, , 
        AC_MSG_ERROR(You must have gd.h to build mod_mapnik_wms.))

AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(LIBS)

AC_OUTPUT(Makefile)

